--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -37,6 +37,10 @@
 								<span ng-if="!order.status">{{order.confirmed ? 'Confirmed' : 'Placed'}}</span>
 							</div>
 						</div>
+						<div class="field-row" ng-if="order.pay_type == 'card'">
+							<div class="field-key">{{order.processor == 'stripe' ? 'Stripe' : 'Balanced'}}</div>
+							<div class="field-value"><a href="https://dashboard.balancedpayments.com/#/marketplaces/***REMOVED***/debits/{{order.txn}}" target="_blank">{{order.txn}}</a></div>
+						</div>
 						<div class="field-row" ng-if="order.status.status != 'delivered'">
 							<div class="field-key">ETA</div>
 							<div class="field-value">
