get rid of the (1 of 6) thing on the driver schedule

--- a/include/views/default/cockpit/drivers/shift/summary/index.phtml
+++ b/include/views/default/cockpit/drivers/shift/summary/index.phtml
@@ -109,7 +109,7 @@
 													$background_color = ( $isFirstWeek ? ';background-color:#45ef7f;' : '' );
 
 													$_driver = '<div style="letter-spacing:-.09em;font-size:11px;padding:2px 0;white-space: nowrap;' . $font_color . $background_color . '">- ';
-													$_driver .= $driver->name . "<br><span style=''>({$ranking} of {$highestRanking})</span>";
+													$_driver .= $driver->name;
 													$_driver .= '</div>';
 
 													$drivers[] = $_driver;
