--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
@@ -31,7 +31,7 @@
 					<tr ng-if="pay_type_reimbursement">
 						<td><strong>Type</strong></td>
 						<td>
-							<span ng-if="result.arbritary">One-time&nbsp;</span>
+							<span ng-if="result.arbritary > 0">One-time&nbsp;</span>
 							Reimbursement
 						</td>
 					</tr>
@@ -39,7 +39,7 @@
 					<tr ng-if="pay_type_payment">
 						<td><strong>Type</strong></td>
 						<td>
-						<span ng-if="result.arbritary">One-time&nbsp;</span>
+						<span ng-if="result.arbritary > 0">One-time&nbsp;</span>
 							Payment
 						</td>
 					</tr>
