--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -11,9 +11,9 @@
 	</div>
 
 	<div class="divider"></div>
-	
+
 	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
-	
+
 	<br>
 
 
@@ -118,7 +118,7 @@
 			<tr><td><a href="/settlement/drivers/payments?driver={{staff.id_admin}}">Settlement </a></td></tr>
 			<tr><td><a href="/drivers/summary/{{staff.id_admin}}">Payments</a></td></tr>
 			<tr><td><a href="/staff/{{staff.login}}/payinfo">Payment Info</a></td></tr>
-			<tr ng-if="staff.pexcard"><td><a href="/staff/{{staff.login}}/pexcard">Pexcard</a></td></tr>
+			<tr ng-if="staff.pexcard"><td><a href="/staff/{{staff.login}}/pexcard">Pexcard / Add funds</a></td></tr>
 		</table>
 	</div>
 
