--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
@@ -21,7 +21,7 @@
 			<div class="support-chat-contents-scroll">
 				<div ng-repeat="message in ticket.messages" class="support-chat-contents-message" id="suppport-chat-message-{{message.id_support}}" ng-class="{'support-chat-contents-message-support': message.is_support, 'support-chat-contents-message-driver': message.is_driver, 'support-chat-contents-message-customer': (!message.is_support && !message.is_driver), 'support-chat-contents-message-unset': message.sending, 'support-chat-contents-message-system': message.from == 'system'}">
 					
-				
+					<a href="/{{message.is_support || message.is_driver ? 'staff' : 'customer'}}/{{message.id_admin}}">
 					<div class="support-chat-contents-message-name">
 						<span class="support-chat-contents-message-icon">
 							<span ng-if="message.from == 'system'">
@@ -33,8 +33,9 @@
 								<i class="fa fa-user" ng-if="!message.is_support && !message.is_driver"></i>
 							</span>
 						</span>
-						{{message.first_name || message.name}}
+						{{(message.first_name && message.first_name != 'false') ? message.first_name : message.name}}
 					</div>
+					</a>
 					<div class="support-chat-contents-message-time">
 						<? /*{{message.timestamp*1000 | date: 'M/d h:mm a'}} */ ?>
 						<span am-time-ago="message.date"></span>
