--- a/include/views/default/cockpit2/frontend/settlement/settlement.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement.phtml
@@ -19,6 +19,8 @@
 			<tr><td><a href="/settlement/drivers/scheduled">Scheduled Payments</a> (<i>not finished or error</i>)</td></tr>
 			<tr><td><a href="/settlement/drivers/payment/arbitrary">Arbitrary Payment</a></td></tr>
 			<tr><td><a href="/staff?type=driver&status=active&limit=25&page=1">Edit driver's payment info</a></td></tr>
+			<tr><td><a href="/settlement/drivers/archived">Archived Payments</a></td></tr>
+			<tr><td><a href="/settlement/drivers/deleted">Deleted Payments</a></td></tr>
 		</table>
 	</div>
 </div>
