--- a/include/views/default/cockpit2/frontend/listview/listview-customers.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-customers.phtml
@@ -2,12 +2,12 @@
 	<table class="tb-zebra">
 		<tr>
 			<th></th>
-			<th>ID</th>
-			<th>Name</th>
-			<th>Phone</th>
-			<th>Address</th>
-			<th><a ng-click="sort('orders')">Orders</th>
-			<th>Last&nbsp;Order</th>
+			<th><a ng-click="sort('id')">ID</a></th>
+			<th><a ng-click="sort('name')">Name</a></th>
+			<th><a ng-click="sort('phone')">Phone</a></th>
+			<th><a ng-click="sort('address')">Address</a></th>
+			<th class="tb-center"><a ng-click="sort('orders')">Orders</a></th>
+			<th><a ng-click="sort('order')">Last&nbsp;Order</a></th>
 		</tr>
 		<tr ng-repeat="customer in customers track by $index" ng-attr-tabindex="{{$index+1}}" tab-select="/customer/{{customer.id_user}}">
 			<td class="tb-image-row"><a href="/customer/{{customer.id_user}}">
@@ -20,7 +20,7 @@
 			<td>{{customer.name}}</td>
 			<td><a href ng-click="callText(customer.phone)">{{customer.phone | formatPhone}}</a></td>
 			<td>{{customer.address}}</td>
-			<td>{{customer.orders}}</td>
+			<td class="tb-center">{{customer.orders}}</td>
 			<td><span ng-if="customer._order_date"><span am-time-ago="customer._order_date"></span></span></td>
 		</tr>
 	</table>
