--- a/include/views/default/cockpit/drivers/shift/summary/index.phtml
+++ b/include/views/default/cockpit/drivers/shift/summary/index.phtml
@@ -209,3 +209,4 @@ $( document ).ready( function(){
 	shift.summary.init();
 } );
 </script>
+<script type="text/javascript" src="/assets/js/jquery.autosize-min.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
