--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -235,7 +235,7 @@
 					<div class="admin-item">
 						<div class="admin-item-left">
 							<div class="admin-item-name">
-								Delivery by Crunchbutton?
+								Delivery by Crunchbutton (3rd-party delivery)
 							</div>
 						</div>
 
@@ -260,20 +260,6 @@
 						</div>
 					</div>
 
-
-					<div class="admin-item" id="order-notifications-sent-container">
-						<div class="admin-item-left">
-							<div class="admin-item-name">
-								Send order notifications?
-							</div>
-
-							<div class="admin-item-desc"></div>
-						</div>
-
-						<div class="admin-item-right">
-							<div class="admin-item-col-small" id="restaurant-order-notifications-sent-container"></div>
-						</div>
-					</div>
 
 					<div class="admin-item">
 						<div class="admin-item-left">
@@ -374,6 +360,22 @@
 								how restaurants are notified of orders
 							</div>
 						</div>
+
+						<div class="admin-item" id="order-notifications-sent-container">
+							<div class="admin-item-left">
+								<div class="admin-item-name">
+									Order Notifications Sent to Restaurant?
+								</div>
+
+								<div class="admin-item-desc"></div>
+							</div>
+
+							<div class="admin-item-right">
+								<div class="admin-item-col-small" id="restaurant-order-notifications-sent-container"></div>
+							</div>
+						</div>
+
+						<br/>
 
 						<div class="admin-item-right">
 							<div class="admin-item-col-x-wide" id="notifications-container"></div>
